@@ -104,6 +104,11 @@ the XML file exported prior to V3.26 to allow it to be successfully imported in 
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3462520);return false;">3462520</a></td>
+<td>
+A password entry's expiry time in days now correctly reflects the
+expiration date for non-recurring expiration.</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3440318);return false;">3440318</a></td>
 <td>
 Filters can now be cleared by double-clicking on the filter indicator in
